--- a/bar/src/main/res/layout/activity_service.xml
+++ b/bar/src/main/res/layout/activity_service.xml
@@ -6,39 +6,27 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/btn_intent1"
+        android:id="@+id/btn_start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="intent1"/>
+        android:text="start service"/>
 
     <Button
-        android:id="@+id/btn_my_intent"
+        android:id="@+id/btn_stop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="myintent"/>
+        android:text="stop service"/>
 
     <Button
-        android:id="@+id/btn_list_view"
+        android:id="@+id/btn_bind"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="listview"/>
+        android:text="bind service"/>
 
     <Button
-        android:id="@+id/btn_view_pager"
+        android:id="@+id/btn_unbind"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="viewpager"/>
-
-    <Button
-        android:id="@+id/btn_fg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="fragment"/>
-
-    <Button
-        android:id="@+id/btn_s"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="service"/>
+        android:text="unbind service"/>
 
 </LinearLayout>
