--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="light_blue">#62B0D5</color>
     <color name="normal">#DFF8F8F4</color>
     <color name="gray">#57DEDFDA</color>
+    <color name="poly_line_colorful">#BA144D</color>
 </resources>
