--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -31,6 +31,11 @@
             android:text="读取定位点" />
 
         <EditText
+            android:id="@+id/et_day"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content" />
+
+        <EditText
             android:id="@+id/et_point_num"
             android:layout_width="30dp"
             android:layout_height="wrap_content" />
