--- a/bar/src/main/res/layout/activity_grid_view.xml
+++ b/bar/src/main/res/layout/activity_grid_view.xml
@@ -5,9 +5,10 @@
     android:background="@color/bg_color"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv"
+    <GridView
+        android:id="@+id/gv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:numColumns="2"/>
 
 </LinearLayout>
