--- a/bar/src/main/res/layout/activity_list_view.xml
+++ b/bar/src/main/res/layout/activity_list_view.xml
@@ -5,9 +5,36 @@
     android:background="@color/bg_color"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp">
+
+        <CheckBox
+            android:id="@+id/ck_d"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:text="显示分割线" />
+
+        <CheckBox
+            android:id="@+id/ck_s"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:text="显示背景色" />
+
+    </LinearLayout>
+
+    <!--
+    divider 设置分割线
+    listSelector 设置item点击的背景色
+    -->
     <ListView
         android:id="@+id/lv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:listSelector="@color/bg_trans"/>
 
 </LinearLayout>
