--- a/bar/src/main/res/layout/view_pager_2.xml
+++ b/bar/src/main/res/layout/view_pager_2.xml
@@ -5,13 +5,10 @@
     android:background="@color/bg_color"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="view_pager_2"
-        android:textSize="50sp"
-        android:textColor="#154468"
-        android:gravity="center"/>
+        android:layout_height="match_parent"
+        android:src="@drawable/vp_l_2"
+        android:scaleType="fitXY"/>
 
 </LinearLayout>
