--- a/bar/src/main/res/layout/view_pager_4.xml
+++ b/bar/src/main/res/layout/view_pager_4.xml
@@ -7,14 +7,8 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/iv_83372"
+        android:layout_height="match_parent"
+        android:src="@drawable/vp_l_4"
         android:scaleType="fitXY"/>
-
-    <Button
-        android:id="@+id/fg_btn1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="程序部署到天热辅导班" />
 
 </LinearLayout>
