--- a/app/src/main/res/layout/activity_http.xml
+++ b/app/src/main/res/layout/activity_http.xml
@@ -22,4 +22,10 @@
         android:layout_height="wrap_content"
         android:text="https" />
 
+    <Button
+        android:id="@+id/btn_cs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="cs" />
+
 </LinearLayout>
