--- a/bar/src/main/res/layout/activity_main.xml
+++ b/bar/src/main/res/layout/activity_main.xml
@@ -10,6 +10,13 @@
         android:layout_height="wrap_content">
 
         <Button
+            android:id="@+id/btn_test"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="test"/>
+
+        <Button
             android:id="@+id/btn_intent1"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -22,13 +29,6 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="myintent"/>
-
-        <Button
-            android:id="@+id/btn_glide"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="glide"/>
 
     </LinearLayout>
 
@@ -143,6 +143,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btn_glide"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="glide"/>
 
         <Button
             android:id="@+id/btn_fg"
