--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,13 @@
             android:layout_weight="1"
             android:text="okhttp" />
 
+        <Button
+            android:id="@+id/btn_ndk"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="ndk" />
+
     </LinearLayout>
 
 </LinearLayout>
